[metadata]
name = moptipyapps
version = attr: moptipyapps.version.__version__
description = Applications of Metaheuristic Optimization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    bin packing
license = GPL 3.0
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Chinese (Simplified)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
url = https://thomasweise.github.io/moptipyapps
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/moptipyapps
    Source = https://github.com/thomasWeise/moptipyapps/
    Tracker = https://github.com/thomasWeise/moptipyapps/issues

[options]
include_package_data = True
install_requires =
    certifi >= 2024.7.4
    defusedxml >= 0.7.1
    moptipy >= 0.9.113
    numpy >= 1.26.4
    numba >= 0.60.0
    matplotlib >= 3.9.1
    pycommons >= 0.8.41
    scipy >= 1.14.0
    urllib3 >= 2.2.2
packages = find:
python_requires = >= 3.10
zip_safe = False

[options.package_data]
moptipyapps = py.typed
moptipyapps.binpacking2d = *.txt, *.bib
moptipyapps.qap.qaplib = *.dat
moptipyapps.tsp.tsplib = *.tsp, *.atsp, *.opt.tour
moptipyapps.ttp.robinx = *.xml

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    moptipy.egg-info*
    moptipyapps.egg-info*
    tests*
